# biblihos

./: README.md  pyproject.toml
.github/workflows/: scrape.yml
data/retraite/: README.md  agirc-arrco.yaml  cnav.yaml  ircantec.yaml
data/retraite/autre/: crpcen.yaml  msa.yaml
data/retraite/fonctionnaire/: cnracl.yaml  erafp.yaml  sre.yaml
data/retraite/liberal/: carcdsf.yaml  carmf.yaml  carpimko.yaml  cavamac.yaml  cavec.yaml  cavp.yaml  cnavpl.yaml  cnbf.yaml
data/retraite/salarie-prive/: agirc-arrco.yaml
data/scpi/: README.md
data/scpi/corum/: eurion.yaml  origin.yaml  xl.yaml
schemas/: retraite.yaml  retraite_fonctionnaire.yaml  retraite_liberal.yaml  scpi.yaml
scrapers/retraite/: __init__.py
scrapers/scpi/: __init__.py  francescpi.py
scripts/: validate.py
